[package]
name = "rusty-csv-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
csv = "1.1"
tinydb = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.5"